# cmakedemo

./: CMakeLists.txt  README.md
CmakeDemo/: CMakeLists.txt  CmakeDemo.cpp  CmakeDemo.h
CmakeStatic/: CMakeLists.txt  CmakeStatic.cpp  CmakeStatic.h  HelloCmake.cpp  HelloCmake.h
